--- a/appendix/appendix-institutional-design-climate-policy.Rmd
+++ b/appendix/appendix-institutional-design-climate-policy.Rmd
@@ -556,6 +556,8 @@ plotAMCE <-
 
 ```
 
+\newpage
+
 # Latin American Elite Survey \label{sec:latam}
 
 \setlength{\parindent}{1cm}
@@ -563,7 +565,7 @@ plotAMCE <-
 
 From October 1 to December 5, 2018, we ran an elite survey with respondents from ten Latin American countries: Argentina, Bolivia, Brazil, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru. The survey proceeded in two steps.
 
-First, we collected information on Latin American elites. Our target sample included:
+First, we collected information on Latin American elites. Our sample included:
 
 1. Executive members
 2. Legislative members
@@ -583,7 +585,7 @@ After finishing this dataset, we started the surveying stage. From November 12 t
 
 # Conjoint Experiment Analysis: Identification and Estimation \label{sec:conjoint}
 
-A conjoint experiment is a statistical technique that allows individuals to express their preferences on multiple attributes of a single topic [@hainmueller2014causal; @bansak2016economic]. Individuals are presented with two hypothetical scenarios, A and B, each containing a series of characteristics a researcher wants to evaluate. The individual chooses one of them. As the attributes are randomised and individuals choose between different pairs of hypothetical scenarios, we can estimate how individuals value each of the conjoined elements.  
+A conjoint experiment is a statistical technique that allows individuals to express their preferences on multiple attributes of a single topic [@hainmueller2014causal; @bansak2016economic]. Individuals are presented with two hypothetical scenarios, A and B, each containing a series of characteristics a researcher wants to evaluate. The individual chooses one of them. As the attributes are randomized and individuals choose between different pairs of hypothetical scenarios, we can estimate how individuals value each of the conjoined elements.  
 
 In our research, we ask what features elite members would like to see implemented in a climate change agreement. We ask their opinion on 6 questions: 1) who makes the rules; 2) who enforces the laws; 3) what punishment should be used against lawbreakers; 4) how are repeated violations punished; 5) how are costs distributed, and 6) how often the agreement will be renegotiated. Each of the questions has four to five different attributes. For the first two questions, we ask individuals if they would rather have the community, local governments, federal governments, or international organizations to create or enforce rules. As for punishments, we have options ranging from do nothing to fines and incarceration. We ask whether the costs of climate change agreements should be paid mostly or exclusively by developed countries, by polluting countries regardless of their wealth, or if costs should be allocated according to the history of emissions of a given nation. Individuals also state their preferences for short-term agreements, a proxy we use for flexibility, or for long-term ones, our proxy for the stability of rules. 
 
@@ -595,49 +597,49 @@ In Table 1 of the main paper, we present the attributes and values for climate m
 
 ## Attribute One: *Who Makes the Rules*
 
-Climate change governance faces various challenges in terms of national and local implementations. For example, the voluntary character of the Nationally Determined Contributions (NDCs), which are the core mechanism of the Paris Agreement, illustrates this decentralized nature. Climate governance can be observed at a number of different scales, such as the international, national, subnational, regional, and local levels [@bruhl2001international]. Microlevel implementation requires regulations and attribution of responsibilities for each level, for which we propose the first dimension of our conjoint experiment is *Who makes the rules?*. To mirror the choices available for climate agreement signatory countries, we included the following levels of ruling: international organizations; federal governments; local governments; local community members; and non-governmental organizations. These levels reveal differences in rule making and top-down versus bottom-up possible schemes.
+Climate change governance faces numerous implementation challenges. For example, the voluntary character of the Nationally Determined Contributions (NDCs), which are the core mechanism of the Paris Agreement, illustrates how climate coordination might be difficult to achieve. Climate governance can be observed at a number of different scales, such as the international, national, subnational, regional, and local levels [@bruhl2001international]. Microlevel implementation requires regulations and attribution of responsibilities for each level, and it is unclear how competences will be distributed. This question motivates the first dimension of our conjoint experiment, *Who makes the rules?* Since rules might be provided by different institutions, we added the following attributes to this first category: international organizations; federal governments; local governments; local community members; and non-governmental organizations. These levels represent possible top-down versus bottom-up regulation schemes and reflect the choices available to treaty signatory countries.
 
-Moving to the *International Organizations* dimension, currently there is no international institution that centralizes agenda-setting, rule making, conflict resolution, and law enforcement for climate-related issues. On the other hand, the Conference of Parties is the highest decision-making body of the UNFCCC (United Nations Framework Convention on Climate Change), and the UN Climate Convention could possibly evolve into a more institutionalized model of international governance. The very signing of the many agreements that comprise the broad climate mitigation international framework---the Rio Convention, the Kyoto Protocol, and the Paris Agreement---constitute a step in this direction of further institutionalization. 
+Regarding the *International organizations* dimension, currently there is no international institution that centralizes agenda-setting, rule making, conflict resolution, and law enforcement for climate-related issues. On the other hand, the Conference of Parties is the highest decision-making body of the UNFCCC (United Nations Framework Convention on Climate Change), and the UN Climate Convention could possibly evolve into a more institutionalized model of international governance. The very signing of the many agreements that comprise the climate mitigation international framework---the Rio Convention, the Kyoto Protocol, and the Paris Agreement---constitutes a step in this direction of further institutionalization. 
 
-We can take the WTO (World Trade Organization) as an example. After the establishment of the GATT (General Agreement on Tariffs and Trade), trade organizations progressively increased their role as gatekeepers, issue entrepreneurs and proponents of international norms. In turn, this movement solidified the international trade regime and established dedicated international organizations. The process of continuous, and eventually formal, institutionalization of trade regimes has been discussed by the rational functionalist school of international relations [e.g., @simons2002handbook]. This mechanism could plausibly be valued by specific country elites as a reliable and legitimate potential source of climate mitigation rules.    
+We can take the WTO (World Trade Organization) as an example. After the establishment of the GATT (General Agreement on Tariffs and Trade), trade organizations progressively increased their role as gatekeepers, issue entrepreneurs, and proponents of international norms. In turn, this movement solidified the international trade regime and established dedicated international organizations. The process of continuous, and eventually formal, institutionalization of trade regimes has been discussed by the rational functionalist school of international relations [e.g., @simons2002handbook]. This mechanism could plausibly be valued by specific country elites as a reliable and legitimate potential source of climate mitigation rules.    
 
 We also include the *Federal government* as an alternative rule provider. Once a treaty is signed and ratified, it must be internalized by a minimum number of signatories in order to entry into force. In other words, federal governments have to comply with the engagement, which highlights the essential role states play in the implementation of international treaties. Despite the growing importance of transnational networks and non-state actors in global regimes, states remain the fundamental actors in the international realm. 
 
-Concerning climate-related agreements, the bare existence of international institutions is not sufficient for global climate governance. In fact, scholars have posited that these engagements can be understood as a discursive strategy, one which allows states to satisfy internal public opinion demands without taking costly global warming mitigation initiatives [e.g., @dimitrov2005hostage]. In that sense, elites may see the federal government as a more credible source of effective environmental legislation. Latin American countries provide examples of national-level climate legislation, such as Mexico's General Law for Climate Change (2012), Bolivia's Mother Earth Legal Framework (Law 300/2012), and Costa Rica's Biodiversity Law (1998). 
+Concerning climate-related agreements, the bare existence of international institutions is not sufficient for global climate governance. In fact, scholars have posited that these engagements can be understood as a discursive strategy, one which allows states to please the domestic public without having to take costly global warming mitigation initiatives [e.g., @dimitrov2005hostage]. In that sense, elites may see the federal government as a more credible source of environmental legislation. Latin American countries provide many examples of national-level climate legislation, such as Mexico's General Law for Climate Change (2012), Bolivia's Mother Earth Legal Framework (Law 300/2012), and Costa Rica's Biodiversity Law (1998). 
 
-Local actors, such as municipal governments, have also been active players in the creation of climate mitigation norms [@barber2013if; @fraundorfer2017role]. Significantly, cities have built a number of networks dedicated to climate issues, such as the ICLEI (Local Governments for Sustainability) and the C40. They include 94 cities and promote coordinated actions to fight climate change. While some countries opt to internalize and implement climate rules at the national level, others prefer to withdraw from the climate treaties and allow local governments to voluntarily comply with international conventions. The state of California is a recent example. Although the United States had chosen to withdraw from the Paris Agreement, the state government offered a plan to follow the mitigation schemes proposed by the treaty. 
+Local actors, such as municipal governments, have also participated in the creation of climate mitigation norms [@barber2013if; @fraundorfer2017role]. Significantly, cities have built a number of networks to tackle climate issues, such as the ICLEI (Local Governments for Sustainability) and the C40. Together, these networks include 94 cities and promote coordinated actions to fight climate change. While some countries opt to implement climate rules at the national level, others prefer to withdraw from the climate treaties while allowing local governments to voluntarily comply with international conventions. The state of California offers a recent example. Although the United States had chosen to withdraw from the Paris Agreement, the Californian government offered a plan to follow the mitigation schemes proposed by the treaty. 
 
-Likewise, climate mitigation practices and norms are strongly influenced by local community members and non-governmental organizations. The civil society has long played a substantive role in setting the agenda and monitoring compliance of climate legislation [@bruhl2001international]. This is also true for Latin America. Indigenous groups have been particularly active in the local sphere and the international arena, as climate change directly endangers traditional communities [@bellier2012peuples]. At the international level, we highlight the creation of the United Nations Permanent Forum on Indigenous Issues. Locally, Latin American communities have founded many non-governmental organizations to fight climate change, such as the _Asamblea Nacional de Afectados Ambientales_ (ANAA) in Mexico, the _Red de los Pueblos Fumigados_ in Argentina and the _Rede Brasileira de Justiça Ambiental_ (RBJA) in Brazil.
+Likewise, climate mitigation practices are strongly influenced by local community members and non-governmental organizations. The civil society has long played a substantive role in setting the agenda and monitoring compliance of climate legislation [@bruhl2001international]. This is also true for Latin America. Indigenous groups have been particularly active in the local sphere, as climate change directly endangers traditional communities [@bellier2012peuples]. Latin American communities have founded many non-governmental organizations to fight climate change, such as the _Asamblea Nacional de Afectados Ambientales_ (ANAA) in Mexico, the _Red de los Pueblos Fumigados_ in Argentina and the _Rede Brasileira de Justiça Ambiental_ (RBJA) in Brazil. At the international level, we highlight the support Latin American groups have provided to the creation of the United Nations Permanent Forum on Indigenous Issues.
 
 ## Attribute Two: *Conflict Resolution Mechanism*
 
-International regimes require efficient institutions to deal with non-compliance and cost reparation to aggrieved parties. We consider five institutions that can plausibly serve as instances for conflict mediation in climate issues: the United Nations; government bureaucracies; local courts; private arbitration; and informal norms. 
+International regimes require efficient institutions to deal with non-compliance and provide cost reparations to aggrieved parties. We consider five institutions that can plausibly serve as instances for conflict mediation in climate issues: the United Nations; government bureaucracies; local courts; private arbitration; and informal norms. 
 
-International trade disputes, such as those concerning unfair practices, are already solved by international courts. The WTO Dispute Settlement Body and the International Criminal Court are two well-known examples. In this sense, the United Nations can also provide a similar resolution mechanism to solve climate disputes.
+International trade disputes, such as those concerning unfair business practices, are already solved by international courts. The WTO Dispute Settlement Body is the best-known example. Criminal offenses are also judged by the International Criminal Court. In this sense, it is reasonable to assume that the United Nations may also provide a similar resolution mechanism to solve climate disputes.
 
-In other situations, government bureaucracies have the discretion to settle conflicts and enforce punishment to violators [@biesbroek2018public]. In Latin America, one example is the Brazilian Environmental Protection Agency (IBAMA), which is run by the federal government. The IBAMA is free to set rules nationally and punish any violation of environmental laws in Brazil. Another example is provided by the Costa Rican National Environmental Office (SETENA). It is responsible for receiving denunciations and conducting investigations on environmental crimes.
+In other situations, government bureaucracies have the discretion to settle conflicts and enforce punishment to violators [@biesbroek2018public]. In Latin America, one example is the Brazilian Environmental Protection Agency (IBAMA), which is run by the federal government. The IBAMA is free to set rules nationally and punish any violation of environmental laws in Brazil. Another example is provided by the Costa Rican National Environmental Office (SETENA), which is responsible for receiving denunciations and conducting investigations on environmental crimes.
 
-Local courts can also function as conflict resolution mechanisms in case of non-compliance. A widely-publicized case in Latin America involves the lawsuit filed by almost 30 thousand Ecuadorian citizens against oil companies Texaco/Chevron. The case was brought to a provincial court in Ecuador [@pigrau2014texaco]. Alternatively, private arbitration is a low-cost and prompt approach for the problem in the case of violations. Chile and Argentina resorted to private arbitration in 1972 to address a border dispute, and the Permanent Court of Arbitration frequently addresses environmental issues.
+Local courts can also function as conflict resolution mechanisms. A widely-publicized case in Latin America involves the lawsuit filed by almost 30 thousand Ecuadorian citizens against oil companies Texaco/Chevron. The case was brought to a provincial court in Ecuador [@pigrau2014texaco]. Alternatively, private arbitration offers a low-cost approach to deal with international violations. Chile and Argentina resorted to private arbitration in 1972 to address a border dispute, and the Permanent Court of Arbitration frequently addresses environmental issues.
 
-Informal norms could also be a plausible and low-cost form of solving conflicts. For example, non-institutionalized forms of reputational sanction within the climate international regime, such as *naming and shaming*, can act as a peer-pressure mechanism pushing for compliance. Note that informal norms within communities usually boost compliance in many situations and allow for more flexible and context adapted solutions (@ostrom1990governing). 
+Informal norms may also be a plausible and low-cost form of solving conflicts. Non-institutionalized forms of reputational sanctions within the climate international regime, such as *naming and shaming*, can act as a peer-pressure compliance mechanisms. There is comparative evidence that informal norms within communities boost local compliance and allow for flexible and context-adapted climate mitigation solutions (@ostrom1990governing). 
 
 ## Attributes Three and Four: *Punishment* and *Punishment for Repeated Violations*
 
-The third and fourth attributes relate to punishments against non-compliance. We design the first feature, *Punishment*, to capture what types of punishment elites would like to apply to climate agreement violators. The options we present closely match existing Latin American regulations on the subject. As such, they constitute plausible answers for the interviewees. For instance, in Brazil, violations are punishable with a range of options, from community services and fines to imprisonment (Law 9605/98, available in: <http://www.planalto.gov.br/ccivil_03/leis/l9605.htm>. That is also the case for Peru (Law 29263, available in: <http://www.minam.gob.pe/delitosambientales>). Similarly, Ecuador has recently approved legislation that adds severe penalties on perpetrators of climate violations to the national constitution. Incarceration, for instance, is one of the possible punishments (Article 245, Código Orgánico Integral Penal, available in: <http://www.oas.org/juridico/PDFs/mesicic5_ecu_ane_con_judi_c%C3%B3d_org_int_pen.pdf>). In this respect, our selected treaty characteristics are plausible to Latin American elites.
+The third and fourth attributes relate to punishments against non-compliance. We design the first feature, *Punishment*, to capture what types of punishment elites would like to apply to climate agreement violators. The options we present closely match existing Latin American regulations on the subject. As such, they constitute plausible answers for the interviewees. In Brazil, violations are punishable with a range of options, from community services and fines to imprisonment (Law 9605/98, available in: <http://www.planalto.gov.br/ccivil_03/leis/l9605.htm>. That is also the case for Peru (Law 29263, available in: <http://www.minam.gob.pe/delitosambientales>). Similarly, Ecuador has recently approved legislation that adds severe penalties on perpetrators of climate violations. Incarceration is one of the possible punishments (Article 245, Código Orgánico Integral Penal, available in: <http://www.oas.org/juridico/PDFs/mesicic5_ecu_ane_con_judi_c%C3%B3d_org_int_pen.pdf>). In this respect, our selected treaty characteristics are plausible to Latin American elites.
 
 Following the same logic, the fourth experimental feature, *Punishment for repeated violations*, captures the actions that should be taken upon subsequent violations of climate change agreements. 
 
 ## Attribute Five: *Agreement Costs*
 
-The fifth design principle refers to the distribution of the agreement's costs. Here we consider the normative debates on climate equality, burden-sharing, and distributive justice in global public goods provision. More specifically, developing nations have stressed how wealthier countries have historically contributed more to global warming [@santos2017global]. For instance, under Copenhagen Accord and the Kyoto Protocol, developed countries were deemed as the sole responsible for CO2 emissions [@kartha2011comparison]. Over time, the wealthier nations successfully contested this position, arguing that emerging economies such as China and India accounted for a large share of greenhouse gas emissions as well. Hence, a new compensation principle emerged, that of *common but differentiated responsibilities and respective capabilities*. While accounting for past environmental pollution, the model also request the contribution of developing countries.
+The fifth design principle refers to the distribution of climate agreement costs. Here we consider the normative debates on burden-sharing and climate distributive justice. Developing nations have stressed how wealthier countries have historically contributed more to global warming [@santos2017global]. More specifically, under the Copenhagen Accord and the Kyoto Protocol, developed countries were deemed as the sole responsible for CO2 emissions [@kartha2011comparison]. Over time, the wealthier nations successfully contested this position, arguing that emerging economies such as China and India account for a large share of recent greenhouse gas emissions. Hence, a new compensation principle emerged, that of *common but differentiated responsibilities and respective capabilities*. While accounting for past environmental pollution, the model also requires the contribution of developing countries to reduce global warming.
 
-Our design feature allows us to capture the position of Latin American elites in this debate. We add four variables derived from the discussion presented above. The first posits that only rich countries should pay the coses of climate agreements, reflecting the original stance of developing nations. The second states that rich countries should pay more than poor countries, which also test the elites' willing to contribute to public goods. The third alternative states that countries should pay costs according to the history of emissions, while the last one affirms that only current emissions should be taken into account. Understanding how Latin American elites stand on this normative issue is essential for assuring compliance in the local level and for crafting national level climate governance schemes.
+Our design feature allows us to capture the position of Latin American elites in this debate. We add four attributes derived from the discussion presented above. The first attribute posits that only rich countries should pay the costs of climate agreements, reflecting the original stance of developing nations. The second attribute states that rich countries should pay more than poor countries, which also tests the elites' willing to contribute to global public goods. The third alternative states that countries should pay costs according to the history of emissions, while the last one affirms that only current emissions should be taken into account. Understanding how Latin American elites stand on this normative issue is essential for assuring local-level compliance and crafting effective climate governance schemes.
 
 ## Attribute Six: *Renegotiation*
 
-Finally, our last conjoint experiment dimension investigates the rigidity of the agreement. From a theoretical standpoint, we know from the contract theory literature that more rigid agreements may fall short when their underlying conditions change. However, agreements that change constantly might be too unstable to form a path dependency and provide focal points for long-run coordination. Thus, parties have to strike a balance between legal stability and the need for adaptation. For instance, if a climate agreement has deleterious effects in the economy while only marginally improving slightly the country's environmental output, decision-makers will push for treaty renegotiations. Conversely, longer agreements reduce coordination costs and give predictability to the system. We analyse temporal preferences of Latin American elites by including five different climate agreement renegotiation schedules: one year, five years, twenty years, fifty years, or never. 
+Finally, our last conjoint experiment dimension investigates the rigidity of climate change agreements. From a theoretical standpoint, the contract theory literature argues that more rigid agreements may fall short when their underlying conditions change. However, agreements that change constantly might be too unstable to form a path dependency and provide focal points for long-run coordination. Thus, parties have to strike a balance between legal stability and the need for adaptation. If a climate agreement has deleterious effects in the economy while only marginally improving the country's environmental output, decision-makers will push for treaty renegotiations. Conversely, longer agreements reduce coordination costs and give predictability to the system. We analyse temporal preferences of Latin American elites by including five different climate agreement renegotiation schedules: one year, five years, twenty years, fifty years, or never. 
 
-Latin America has a history of political and economic volatility, so it is unclear whether elites will prefer long-term or short-term climate change initiatives. On the one hand, elites may perceive longer contracts as a means to force collective commitment to fighting global warming. On the other hand, elites can also anticipate future volatility discount the future more heavily in favor of immediate circumstances. 
+Latin America has a history of political and economic volatility, so it is unclear whether elites will prefer long-term or short-term climate change initiatives. On the one hand, elites may perceive longer contracts as a means to force collective commitment to fight global warming. On the other hand, elites can also anticipate future volatility and discount the future more heavily in favor of immediate circumstances. 
 
 # Descriptive Statistics \label{sec:descstats}
 
@@ -685,11 +687,11 @@ p<- ggplot(data = tab, aes(x = `Group Origin`, y = Frequency)) +
 p
 ```
 
-As we can see, we managed to contact more than fifty elite members for all countries but Bolivia and Peru. To compensate for the low response rates in these two countries, we exceeded the sample size in all the remaining states.
+As we can see, we contacted more than fifty elite members for all countries but Bolivia and Peru. To compensate for the low response rates in these two countries, we exceeded the sample size in all the remaining states.
 
-Regarding elite type, we have more data on academics and members of civil society. They are followed by members the Executive and of the Legislative, respectively. This result is in line with our expectations given the difficulty of accessing high profile government members. 
+Regarding elite type, we interviewed a high number of academics and members of civil society. They were followed by members the Executive and of the Legislative, respectively. This result is in line with our expectations given the difficulty of reaching high profile government members. 
 
-In the map, we see that respondents are concentrated in the largest municipalities of their respective countries. As elites tend to be more urban and well-educated than the average citizen, we expected the clustering of elites in big cities.
+We see that respondents are concentrated in the largest municipalities of their respective countries. As elites tend to be more urban and well-educated than average, we indeed expected that most of our sample would be clustered in big cities.
 
 # Frequency of Features Selected by Each Attribute \label{sec:features}
 
