--- a/appendix/appendix-institutional-design-climate-policy.Rmd
+++ b/appendix/appendix-institutional-design-climate-policy.Rmd
@@ -621,11 +621,11 @@ In other situations, government bureaucracies have the discretion to settle conf
 
 Local courts can also function as conflict resolution mechanisms. A widely-publicized case in Latin America involves the lawsuit filed by almost 30 thousand Ecuadorian citizens against oil companies Texaco/Chevron. The case was brought to a provincial court in Ecuador [@pigrau2014texaco]. Alternatively, private arbitration offers a low-cost approach to deal with international violations. Chile and Argentina resorted to private arbitration in 1972 to address a border dispute, and the Permanent Court of Arbitration frequently addresses environmental issues.
 
-Informal norms may also be a plausible and low-cost form of solving conflicts. Non-institutionalized forms of reputational sanctions within the climate international regime, such as *naming and shaming*, can act as a peer-pressure compliance mechanisms. There is comparative evidence that informal norms within communities boost local compliance and allow for flexible and context-adapted climate mitigation solutions (@ostrom1990governing). 
+Informal norms may also be a plausible and low-cost form of solving conflicts. Non-institutionalized forms of reputational sanctions within the climate international regime, such as *naming and shaming*, can act as a peer-pressure compliance mechanisms. There is comparative evidence that informal norms within communities boost local compliance and allow for flexible and context-adapted climate mitigation solutions [@ostrom1990governing]. 
 
 ## Attributes Three and Four: *Punishment* and *Punishment for Repeated Violations*
 
-The third and fourth attributes relate to punishments against non-compliance. We design the first feature, *Punishment*, to capture what types of punishment elites would like to apply to climate agreement violators. The options we present closely match existing Latin American regulations on the subject. As such, they constitute plausible answers for the interviewees. In Brazil, violations are punishable with a range of options, from community services and fines to imprisonment (Law 9605/98, available in: <http://www.planalto.gov.br/ccivil_03/leis/l9605.htm>. That is also the case for Peru (Law 29263, available in: <http://www.minam.gob.pe/delitosambientales>). Similarly, Ecuador has recently approved legislation that adds severe penalties on perpetrators of climate violations. Incarceration is one of the possible punishments (Article 245, Código Orgánico Integral Penal, available in: <http://www.oas.org/juridico/PDFs/mesicic5_ecu_ane_con_judi_c%C3%B3d_org_int_pen.pdf>). In this respect, our selected treaty characteristics are plausible to Latin American elites.
+The third and fourth attributes relate to punishments against non-compliance. We design the first feature, *Punishment*, to capture what types of punishment elites would like to apply to climate agreement violators. The options we present closely match existing Latin American regulations on the subject. As such, they constitute plausible answers for the interviewees. In Brazil, violations are punishable with a range of options, from community services and fines to imprisonment (Law 9605/98, available at <http://www.planalto.gov.br/ccivil_03/leis/l9605.htm>. That is also the case for Peru (Law 29263, available at <http://www.minam.gob.pe/delitosambientales>). Similarly, Ecuador has recently approved legislation that adds severe penalties on perpetrators of climate violations. Incarceration is one of the possible punishments (Article 245, Código Orgánico Integral Penal, available at <http://www.oas.org/juridico/PDFs/mesicic5_ecu_ane_con_judi_c%C3%B3d_org_int_pen.pdf>). In this respect, our selected treaty characteristics are plausible to Latin American elites.
 
 Following the same logic, the fourth experimental feature, *Punishment for repeated violations*, captures the actions that should be taken upon subsequent violations of climate change agreements. 
 
