--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,4 +1,16 @@
 %%% References
+
+@article{bansak2017europeans,
+  title={{Europeans Support a Proportional Allocation of Asylum Seekers}},
+  author={Bansak, Kirk and Hainmueller, Jens and Hangartner, Dominik},
+  journal={Nature Human Behaviour},
+  volume={1},
+  number={7},
+  pages={0133},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
 @article{friman2015agreement,
   title={{Agreement, Significance, and Understandings of Historical Responsibility in Climate Change Negotiations}},
   author={Friman, Mathias and Hjerpe, Mattias},
@@ -816,7 +828,7 @@ year = {2019}
 @article{abbott2000hard,
   title={{Hard and Soft Law in International Governance}},
   author={Abbott, Kenneth W and Snidal, Duncan},
-  journal={International organization},
+  journal={International Organization},
   volume={54},
   number={3},
   pages={421--456},
@@ -880,9 +892,9 @@ year = {2019}
 }
 
 @article{raustiala2004regime,
-  title={The Regime Complex for Plant Genetic Resources},
+  title={{The Regime Complex for Plant Genetic Resources}},
   author={Raustiala, Kal and Victor, David G},
-  journal={International organization},
+  journal={International Organization},
   volume={58},
   number={2},
   pages={277--309},
