--- a/manuscript/institutional-design-climate-policy.tex
+++ b/manuscript/institutional-design-climate-policy.tex
@@ -81,7 +81,7 @@
 \begin{abstract}
 \onehalfspacing
 \noindent 
-Which institutional features do Latin American elites favor for local climate change policies? Climate change mitigation requires active local level implementation, but it remains unclear which institutional arrangements maximize the support for environmental rules. In this paper, we run a conjoint experiment with elite members of 10 Latin American countries and ask respondents to evaluate institutional designs drawn from a pool of 5,500 possible local climate governance arrangements. We find that Latin American elites prefer international organizations to formulate climate policies, support imposing increasing fines on violators, and favor renewing agreements every five years. We also find that elites support both international institutions and local courts to mediate conflicts, but they distrust non-governmental organizations and reject informal norms as an means of conflict resolution. Our results identify possible challenges in crafting local level climate mitigation policies and offer new insights about how to integrate local and international levels in environmental agreements
+Which institutional features do Latin American elites favor for local climate change policies? Climate change mitigation requires active local level implementation, but it remains unclear which institutional arrangements maximize the support for environmental rules. In this paper, we run a conjoint experiment with elite members of 10 Latin American countries and ask respondents to evaluate institutional designs drawn from a pool of 5,500 possible local climate governance arrangements. We find that Latin American elites prefer international organizations to formulate climate policies, support imposing increasing fines on violators, and favor renewing agreements every five years. We also find that elites support both international institutions and local courts to mediate conflicts, but they distrust non-governmental organizations and reject informal norms as an means of conflict resolution. Our results identify possible challenges in crafting local level climate mitigation policies and offer new insights about how to integrate local and international levels in environmental agreements.
 
 \vspace{.5cm}
 
